--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -2,14 +2,30 @@
 -e .
 
 # external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-{% if cookiecutter.python_interpreter != 'python3' %}
+click           # for creating commandline tools
+dask[dataframe]
+joblib				# for sklearn in parallel
+numpy==1.16.2
+pandas==0.24.2
+pyarrow==0.13.0		# for pandas to support parquet files (alternative engine 1)
+python-dotenv>=0.5.1	# from cookiecutter
+recommonmark		# for using markdown in Sphinx documentation
+sklearn
+Sphinx          # documentation
+tables				# for pandas to support parquet files (alternative engine 2)
 
-# backwards compatibility
-pathlib2
-{% endif %}
+# plotting libraries
+#altair
+bokeh
+matplotlib
+plotly
+seaborn
+
+--extra-index-url https://esisoj70.emea.nsn-net.net/artifactory/api/pypi/rain-pip-local/simple
+simplogify==1.0.6
+
+
+#awscli			# AWS (alternative 1)
+#s3cmd			# AWS (alternative 2)
+
+#distributed		# distributed scheduler for Dask
